Commit as backup

--- a/index.html
+++ b/index.html
@@ -3,16 +3,73 @@ layout: default
 title: University College Cork IEEE Student Branch
 tagline: 
 ---
-	
-{% for post in site.posts %}
-<article>
-  <header>
-    <h2>
-        <a href="{{ post.url }}" rel="bookmark" title="Permanent link to ">{{ post.title }}</a>
-    </h2>
-    <h5><time>{{ post.date | date: '%B' }} {{ post.date | date: '%e' }}, {{ post.date | date: '%Y' }}</time></h5>
-  </header>
-  {{ post.content }}
-</article>
-{% endfor %}
+
+
+<h1>University College Cork IEEE Student Branch</h1>
+
+
+{% include ieeesb/masthead.html %}
+
+
+
+
+
+<p>IEEE, an association dedicated to advancing innovation and technological excellence for the benefit of humanity, is the world’s largest technical professional society. It is designed to serve professionals involved in all aspects of the electrical, electronic and computing fields and related areas of science and technology that underlie modern civilization.</p>
+
+IEEE’s roots, however, go back to 1884 when electricity was just beginning to become a major force in society. There was one major established electrical industry, the telegraph, which—beginning in the 1840s—had come to connect the world with a communications system faster than the speed of transportation. A second major area had only barely gotten underway—electric power and light, originating in Thomas Edison’s inventions and his pioneering Pearl Street Station in New York.
+ 
+Meaning of "I-E-E-E"
+
+IEEE, pronounced "Eye-triple-E", stands for the Institute of Electrical and Electronics Engineers. The association is chartered under this name and it is the full legal name.
+
+However, as the world's largest technical professional association, IEEE's membership has long been composed of engineers, scientists, and allied professionals. These include computer scientists, software developers, information technology professionals, physicists, medical doctors, and many others in addition to our electrical and electronics engineering core. For this reason the organization no longer goes by the full name, except on legal business documents, and is referred to simply as IEEE.
+ 
+ 
+
+top of page
+ 
+Foundation of the AIEE
+
+In the spring of 1884, a small group of individuals in the electrical professions met in New York. They formed a new organization to support professionals in their nascent field and to aid
+them in their efforts to apply innovation for the betterment of humanity—the American Institute of Electrical Engineers, or AIEE for short. That October the AIEE held its first technical meeting in Philadelphia, Pa. Many early leaders, such as founding President Norvin Green of Western Union, came from telegraphy.
+
+Others, such as Thomas Edison, came from power, while Alexander Graham Bell represented the newer telephone industry. As electric power spread rapidly across the land—enhanced by innovations such as Nikola Tesla’s AC Induction Motor, long distance AC transmission and large-scale power plants, and commercialized by industries such as Westinghouse and General Electric—the AIEE became increasingly focused on electrical power and its ability to change people’s lives through the unprecedented products and services it could deliver. There was a secondary focus on wired communication, both the telegraph and the telephone. Through technical meetings, publications, and promotion of standards, the AIEE led the growth of the electrical engineering profession, while through local sections and student branches, it brought its benefits to engineers in widespread places. 
+ 
+ 
+
+top of page
+ 
+Foundation of the IRE
+
+A new industry arose beginning with Guglielmo Marconi’s wireless telegraphy experiments at the turn of the century. What was originally called “wireless” became radio with the electrical amplification possibilities inherent in the vacuum tubes which evolved from John Fleming’s diode and Lee de Forest’s triode. With the new industry came a new society in 1912, the Institute of Radio Engineers.
+
+The IRE was modeled on the AIEE, but was devoted to radio, and then increasingly to electronics. It, too, furthered its profession by linking its members through publications, standards and conferences, and encouraging them to advance their industries by promoting innovation and excellence in the emerging new products and services.
+ 
+ 
+
+top of page
+ 
+The Societies converge and merge
+
+Through the help of leadership from the two societies, and with the applications of its members’ innovations to industry, electricity wove its way—decade by decade—more deeply into every corner of life—television, radar, transistors, computers. Increasingly, the interests of the societies overlapped.
+
+Membership in both societies grew, but beginning in the 1940s, the IRE grew faster and in 1957 became the larger group. On 1 January 1963, The AIEE and the IRE merged to form the Institute of Electrical and Electronics Engineers, or IEEE. At its formation, the IEEE had 150,000 members, 140,000 of whom were in the United States. 
+ 
+ 
+
+top of page
+ 
+Growth and globalization
+
+Over the decades that followed, with IEEE’s continued leadership, the societal roles of the technologies under its aegis continued to spread across the world, and reach into more and more areas of people’s lives. The professional groups and technical boards of the predecessor institutions evolved into IEEE Societies. By the early 21st Century, IEEE served its members and their interests with 38 societies; 130 journals, transactions and magazines; more 300 conferences annually; and 900 active standards.
+
+Since that time, computers evolved from massive mainframes to desktop appliances to portable devices, all part of a global network connected by satellites and then by fiber optics. IEEE’s fields of interest expanded well beyond electrical/electronic engineering and computing into areas such as micro- and nanotechnology, ultrasonics, bioengineering, robotics, electronic materials, and many others. Electronics became ubiquitous—from jet cockpits to industrial robots to medical imaging.
+
+As technologies and the industries that developed them increasingly transcended national boundaries, IEEE kept pace, becoming a truly global institution which used the innovations of the practitioners it represented in order to enhance its own excellence in delivering products and services to members, industries, and the public at large. Publications and educational programs were delivered online, as were member services such as renewal and elections. By 2010, IEEE had over 395,000 members in 160 countries. Through its worldwide network of geographical units, publications, web services, and conferences, IEEE remains the world's largest technical professional association.
+
+
+
+
+
+
 
