--- a/sb/index.html
+++ b/sb/index.html
@@ -12,7 +12,7 @@ tagline:
 
 <h4>Welcome to the UCC IEEE Student Branch Website</h4>
 
-<p>Check out the <a href="/sb/blog.html">Blog</a> for upcoming events.</p>
+<p>Check out the <a href="{BASE_PATH}blog.html">Blog</a> for upcoming events.</p>
 
 <p>You can contact us by emailing: <a href="mailto:ieee@umail.ucc.ie"> ieee@umail.ucc.ie</a></p>
 
