Commit added landing page

--- a/index.html
+++ b/index.html
@@ -1,19 +1,103 @@
----
-layout: page_index
-title: University College Cork IEEE Student Branch
-tagline: 
----
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+<head>
+<title>IEEE at UCC </title>
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="description" content="The Department of Electrical & Electronic Engineering at UCC is hosting two IEEE websites" />
+<meta name="keywords" content="ieee,IEEE,sscs,SSCS,ucc,UCC" />
+
+    <link href="assets/themes/twitter/css/uccieee.css" rel="stylesheet">
+    <link href="assets/themes/twitter/bootstrap222/css/bootstrap.css" rel="stylesheet">
 
 
+<!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 
-<div>
+<style type="text/css">
+body {
+  background-color: #eee;
+  margin: 10;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 18px;
+  color: #404040;
+}
+.topbar {
+  background-color: #002d44;
+  height: 40px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10000;
+  overflow: visible;
+}
+.container {
+  position: relative;
+  min-width: 300px;
+  max-width: 780px;
+  padding-left: 20%;
+  padding-right: 20%;
+  zoom: 1;
+  margin-top: 20px;
+}
 
-  <h4>Welcome to the UCC IEEE Student Branch Website</h4>
+/* The white background content wrapper */
+.container > .content {
+  background-color: #fff;
+  padding: 20px;
+  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
+  -webkit-border-radius: 0 0 6px 6px;
+     -moz-border-radius: 0 0 6px 6px;
+          border-radius: 0 0 6px 6px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+          box-shadow: 0 1px 2px rgba(0,0,0,.15);
+}
 
-  <p>The University College Cork IEEE Student Branch is an active and growing student group in University College Cork (UCC). It is an official student branch of the Institute of Electrical and Electronic Engineers (IEEE), a non-profit professional association headquartered in New York City that is dedicated to advancing technological innovation and excellence.</p>
+.alignLeft { float:left; margin-right: 1em; border: none;}
+.copyright {float:right; margin-right: 25%; border: 1em}
+</style>
 
-  <p><a href="{{ BASE_PATH }}events.html">Check out the upcoming events.</a> </p>
 
-  <p>You can contact us by emailing: <a href="mailto:ieee@umail.ucc.ie"> ieee@umail.ucc.ie</a></p>
-
+</head>
+<body>
+<div class="page-header">
+	<h1><center><a href="/">IEEE at UCC</a></center></h1>
 </div>
+
+<div class="container">
+	<div class="content span10">
+		<div>
+			<p>The UCC Department of Electrical & Electronic Engineering hosts two IEEE websites.</p>
+			<p><h3 style="text-align: left"><a href="/sb.html">UCC IEEE Student Branch</a></h3></p>
+			<a title="UCC IEEE Student Branch" 
+href="/sb.html"><img alt="IEEE logo" 
+src="images/logos/ieee_tag_blue.gif" width="110px" height="56"  class="alignLeft"/></a>
+			<div class="desc">
+				<p>The University College Cork IEEE Student Branch is an active and growing student group in University College Cork (UCC).  It is an official student branch of the Institute of Electrical and Electronics Engineers (IEEE), a non-profit professional association headquartered in New York City that is dedicated to advancing technological innovation and excellence. </p>
+			</div>
+		</div>
+		<div>
+			<p><br><br></p>
+			<h3><a href="http://ieee.ucc.ie/sscs">IEEE Solid-State Circuits Society Ireland Chapter</a></h3>
+			<td style="text-align: left;"><a title="IEEE Solid-State Circuits Society Ireland Chapter" href="http://ieee.ucc.ie/sscs"><img alt="sscslogo" src="images/logos/sscslogo.gif" width="66" height="56" class="alignLeft"/></a></td>
+			<div class="desc">
+				<p>The Solid-State Circuits Society is interested in all aspects of solid-state circuits: the design, testing and application of circuits and subsystems, as well as closely related topics in device  technology and circuit theory. They also focus on scientific, technical and industrial applications, in addition to other activities that contribute to the field, or utilise the  techniques or products of the field, as the art develops.</p>
+			</div>
+		</div>
+	</div>
+	
+</div>
+<div class="container">
+  <br><br>
+  <div style="align: center">
+    <a href="http://www.ucc.ie/en/eleceng/"><img  width="75px" src="images/logos/EEE-LOGO2.jpg" style="padding-left:240px; padding-right:50px;"  alt="UCC Department of Electrical and Electronic Engineering"></img></a>	
+    <a href="http://www.ucc.ie/"><img  width="200px" src="images/logos/ucc_logo_simplfied_eee.jpg"  alt="University College Cork Logo" ></img></a>
+  </div>
+    </div>
+</body>
+</html>
