--- a/index.html
+++ b/index.html
@@ -25,16 +25,7 @@ body {
   line-height: 18px;
   color: #404040;
 }
-.topbar {
-  background-color: #002d44;
-  height: 40px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 10000;
-  overflow: visible;
-}
+
 .container {
   position: relative;
   min-width: 300px;
@@ -47,7 +38,7 @@ body {
 
 /* The white background content wrapper */
 .container > .content {
-  background-color: #fff;
+  background-color: #FBFAF7;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
   -webkit-border-radius: 0 0 6px 6px;
