--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@ tagline:
 
 <div>
 
-  <h4>Welcome to the UCC IEEE Student Branch Website</h4>
+  <h3>Welcome to the UCC IEEE Student Branch Website</h3>
 
   <p>The University College Cork IEEE Student Branch is an active and growing student group in University College Cork (UCC). It is an official student branch of the Institute of Electrical and Electronic Engineers (IEEE), a non-profit professional association headquartered in New York City that is dedicated to advancing technological innovation and excellence.</p>
 
-  <p><a href="{{ BASE_PATH }}events.html">Check out the upcoming events.</a> </p>
-
-  <p>You can contact us by emailing: <a href="mailto:ieee@umail.ucc.ie"> ieee@umail.ucc.ie</a></p>
+   <div id="posts">
+    	{% for post in site.posts offset: 0 limit: 10 %}
+          <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+           
+    {% endfor %}
+  </div>
 
 </div>
