--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ tagline:
    <div id="posts">
     	{% for post in site.posts offset: 0 limit: 10 %}
           <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-           
+          <h4>{{post.description}}</h4></br> 
     {% endfor %}
   </div>
 
